# x11-examples

./: .gitignore
CreateWindow/: example.cpp
QueryWindows/: .example.cpp.swp  CMakeLists.txt  example.cpp
Wnck/: CMakeLists.txt  Log.h  example.cpp  socket.cpp
input_methods/: Makefile  fakeapp_main.c  fakekey_main.cpp
input_methods/fake_ime/: CMakeLists.txt  README.md  deploy.sh  fakeime_main.cpp  lotime.xml
